--- a/Pandas para usuarios de Excel.html
+++ b/Pandas para usuarios de Excel.html
@@ -13116,8 +13116,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Pandas-para-usuarios-de-Excel"><u>Pandas para usuarios de Excel</u><a class="anchor-link" href="#Pandas-para-usuarios-de-Excel">&#182;</a></h2><h3 id="PyConAr-2019">PyConAr 2019<a class="anchor-link" href="#PyConAr-2019">&#182;</a></h3><h4 id="Por-Fernando-Gonzalez-Prada">Por Fernando Gonzalez Prada<a class="anchor-link" href="#Por-Fernando-Gonzalez-Prada">&#182;</a></h4><p>@fgonzalezprada</p>
-
+<h2 id="Pandas-para-usuarios-de-Excel"><u>Pandas para usuarios de Excel</u><a class="anchor-link" href="#Pandas-para-usuarios-de-Excel">&#182;</a></h2><h3 id="PyConAr-2019">PyConAr 2019<a class="anchor-link" href="#PyConAr-2019">&#182;</a></h3><h4 id="Por-Fernando-Gonzalez-Prada">Por Fernando Gonzalez Prada<a class="anchor-link" href="#Por-Fernando-Gonzalez-Prada">&#182;</a></h4>
 </div>
 </div>
 </div>
@@ -18167,6 +18166,8 @@ memory usage: 2.0+ KB
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>Pueden bajar el código completo y los datasets completos en mi GitHub:</p>
 <p><a href="https://github.com/fsgp/PyConAr-2019">https://github.com/fsgp/PyConAr-2019</a></p>
+<p>fgonzalezprada@fgp-analytics.com</p>
+<p>@fgonzalezprada</p>
 <h1 id="Gracias!!!">Gracias!!!<a class="anchor-link" href="#Gracias!!!">&#182;</a></h1>
 </div>
 </div>
